# Home-Thermostat

./: .gitignore  CMakeLists.txt  README.md  Thermostat.c  adc_driver.c  adc_driver.h  analog_tmp_sensor.c  analog_tmp_sensor.h  button_driver.c  button_driver.h  debug.h  digital_tmp_sensor.c  digital_tmp_sensor.h  lcd.c  lcd.h  ntp.c  ntp.h  potenciometer.c  potenciometer.h  relay_driver.c  relay_driver.h  wifi_driver.c  wifi_driver.h
